Dynamically allocating images
Sending product-content from index html to mainjs file.

--- a/index.html
+++ b/index.html
@@ -48,6 +48,10 @@
             <h2 class="section-title">Food Stalls</h2>
         </div>
         <div class="products-center">
+            
+            <!--Sending this div container to mainjs so as to dynacmically allocate the items through product.jscn or contentFul-->
+            <!--
+                
             <article class="product">
                 <div class="img-container">
                     <img src="./images/picture.jpg" alt="Image-one" class="product-img">
@@ -60,6 +64,7 @@
                 <h3>Chinese Stall </h3>
                 <h4>150Rs</h4>
             </article>
+            -->
         </div>
     </div>
 
